--- a/template.html
+++ b/template.html
@@ -134,7 +134,7 @@
     <!-- Top Navbar -->
     <nav class="navbar navbar-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Sarkari Jobs</a>
+            <a class="navbar-brand" href="#">Sarkari Super Jobs</a>
         </div>
     </nav>
 
